tests/ui/cilk/cilk_for_continue_outside.stderr
error: cannot use `continue` within cilk_for
  --> $DIR/cilk_for_continue_outside.rs:11:13
   |
LL |             continue 'outside;
   |             ^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

